--- a/plugin/scroll-reveal.css
+++ b/plugin/scroll-reveal.css
@@ -1,1 +1,12 @@
 
+*[data-scroll-reveal="true"]{
+    transition: .4s ease-in-out;
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+.hidden{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+}
